# ipu_assistant

./: Cargo.toml  Dockerfile  Makefile.toml  Procfile  README.md  docker-compose.yml  heroku.yml  schema.sql
src/: cmd.rs  config.rs  events_repository.rs  handler.rs  lib.rs  main.rs  model.rs  scheduler.rs  user_repository.rs
