[package]
name = "ipu_assistant"
version = "0.1.0"
authors = ["wakame-tech <kamata1919@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "0.1"
sqlx = { version = "=0.4.2", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "0.2.21", features = ["full"] }
anyhow = "=1.0.36"
once_cell = "=1.5.2"
chrono = "=0.4.19"
cron = "0.8.0"
itertools = "0.4.7"
reqwest = { version = "=0.10.10", features = ["json"] }
job_scheduler = "*"
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }